--- a/Analisis_COVID19.Rmd
+++ b/Analisis_COVID19.Rmd
@@ -378,7 +378,7 @@ lines(TVM_Recuperados~Fecha, data=datos_spain, type="l", col="green")
 legend("topleft", c("Confirmados", "Muertos", "Recuperados"),
        col=c("blue","red","green"), lwd=2, pch=1)
 
-
+#comentario prueba git
 
 ```
 
