--- a/Analisis_COVID19.Rmd
+++ b/Analisis_COVID19.Rmd
@@ -17,6 +17,7 @@ library(rnaturalearth) #para mapas con datos del mundo
 library(plotly) #para graficos interactivos
 library(xts) #series temporales
 library(dygraphs) #representacion con xts
+library(car)
 use_python("/Users/Juan/anaconda3/python.exe")
 ```
 
@@ -418,5 +419,125 @@ ggplotly(g)
 ```
 
 
+## Modelos de regresión simple
+* $x$: Variable indep.: nº días desde origen pandemia
+* $y$: Variable dep.: nº casos confirmados
 
+$$y=f(x)$$
+```{r}
+datos_spain$Dias=as.numeric(datos_spain$Fecha - dmy("22/01/2020"))
+```
+
+### Regresión lineal
+$$y=ax+b, a,b\in \mathbb R$$
+$$min_{a,b\in\mathbb R} \sum_{i=1}^n (y_i-(ax_i+b))^2$$
+```{r}
+mod1 <- lm(Casos_Confirmados~Dias, data=datos_spain)
+summary(mod1)
+```
+
+$$Casos\ Confirmados=`r mod1$coefficients[2]`Dias+ `r mod1$coefficients[1]`$$
+
+```{r}
+#grafica regresion
+plot(datos_spain$Dias, datos_spain$Casos_Confirmados)
+abline(mod1, col="red")
+
+#grafica de los errores
+plot(mod1$residuals~mod1$fitted.values, xlab="valores ajustados", ylab="residuos del modelo")
+#la diferencia de tendencias indica que el modelo no será correcto (no es aleatorio), habrá mucho error
+
+#homocedasticidad
+residuos = mod1$residuals
+library(car)
+#si hubiera homocedasticidad los residuos seguirian una distribucion normal
+qqPlot(residuos, distribution = "norm", mean =mean(residuos),sd=sd(residuos))
+#los datos deberian seguir la recta y no salirse de los márgenes de error, parece que no siguen normalidad, no es modelo lineal
+#descartamos el modelo pese a que los estadísticos eras buenos.
+```
+
+### Regresión exponencial
+$$log(y)=ax+b,a,b \in \mathbb R$$
+$$y=e^{ax+b}=m e^{ax}$$
+```{r}
+mod2<-lm(log(Casos_Confirmados)~Dias, data=datos_spain[datos_spain$Casos_Confirmados>0,])
+summary(mod2)
+
+```
+$$Casos \Confirmados = `r exp(mod2$coefficients[1])` \cdot e^{`r mod2$coefficients[2]` \cdot x}$$
+
+```{r}
+plot(datos_spain$Dias, datos_spain$Casos_Confirmados)
+lines(exp(mod2$coefficients[1])*exp(mod2$coefficients[2]*datos_spain$Dias), col="blue")
+
+plot(mod2$residuals~mod2$fitted.values)
+residuos =mod2$residuals
+qqPlot(residuos, distribution = "norm", mean=mean(residuos), sd=sd(residuos))
+```
+
+### Modelo potencial
+
+$$log(y)=a\cdot log(x)+b, a,b\in \mathbb R$$
+$$y=e^{a\cdot log(x)+b}=e^b\cdot e^{log(x)^a}=mx^a$$
+```{r}
+mod3<-lm(log(Casos_Confirmados)~log(Dias),
+         data=datos_spain[datos_spain$Casos_Confirmados>0,])
+summary(mod3)
+```
+
+$$Casos \Confirmados = `r exp(mod3$coefficients[1])`\cdot Dias^{´r mod2$coefficients[2]´}$$
+
+```{r}
+plot(datos_spain$Dias, datos_spain$Casos_Confirmados)
+lines(exp(mod3$coefficients[1])*datos_spain$Dias^mod3$coefficients[2],
+      col="green")
+
+plot(mod3$residuals~mod3$fitted.values,xlab="Valores ajustados", ylab="Residuos del modelo")
+residuos=mod3$residuals
+qqPlot(residuos, distribution="norm", mean=mean(residuos),sd=sd(residuos))
+```
+
+```{r}
+su_model <- lm(log(Casos_Confirmados) ~ Dias + log(Dias) + I(Dias^2) + 
+                 I(Dias^3) + sqrt(Dias), #la I indica que eso es variable indep. del modelo
+               data=datos_spain[datos_spain$Casos_Confirmados>0,])
+summary(su_model)
+
+
+
+mi_model<-lm(Casos_Confirmados ~ log(Dias), data=datos_spain[datos_spain$Casos_Confirmados>0,])
+summary(mi_model)
+
+
+```
+
+```{r}
+#Predicciones
+
+start_date=ymd('2020-01-22')
+end_date=ymd('2020-07-30')
+
+dates=seq(start_date+1,end_date, by = "1 day")
+days_since_start=as.numeric(dates - start_date)
+
+new_data=data.frame(Dias=days_since_start)
+
+pred1=predict(mod1, newdata = new_data)
+pred2=exp(predict(mod2, newdata = new_data))
+pred3=exp(predict(mod3, newdata = new_data))
+pred4=exp(predict(su_model, newdata = new_data))
+
+#objeto time series
+datos_por_fecha_ts=xts(x=data.frame(Real=c(datos_spain$Casos_Confirmados,
+                                    rep(NA,length(pred1)-length(datos_spain$Casos_Confirmados))), 
+                                    #rellenamos con NAs para que coindidan las longitudes de datos
+                       Mod_Lin=pred1,
+                       Mod_Exp=pred2,
+                       Mod_Pot=pred3),
+                      # Mod_Mix=pred4),
+                       order.by = dates)
+                    #quitamos algunos para poder visualizar el resto (malos result)
+
+dygraph(datos_por_fecha_ts)
+```
 
